--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -5,6 +5,7 @@
 <title>Amar rocks</title>
 </head>
 <body>
-
+	<a href="AjoutProduit.jsf">ajout produit</a>
+	<a href="NewFile.jsf">calendrier</a>
 </body>
 </html>
